# open_clip

./: .gitignore  .pylintrc  CITATION.cff  Dockerfile.test  Dockerfile.training  Feature Evaluation.ipynb  HISTORY.md  Information Imbalance.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  alt_install.md  clip_train.yaml  cmd_list.txt  conda_environment_export.yml  environment.yml  environment_n.yml  environment_old.yml  error_logs.txt  evaluate.bash  finetune.bash  finetuning.py  gradcam_convnext.py  gradcam_resnet.py  gradcam_vit.py  gradients.py  hyperparam.yaml  main.py  models.json  models.txt  mypy.ini  notes.txt  pyproject.toml  pytest.ini  requirements-benchmark.txt  requirements-npu.txt  requirements-test.txt  requirements-training.txt  requirements.txt  (+4 more)
GradCache_mod_src/: README.md  setup.py
batch/: RESUME_lit_regnetx320_laion400m_4node_tensorboard_b256.sbatch  RESUME_lit_swin_laion400m_4node_tensorboard_b512.sbatch  RESUME_lit_tf_efficientnetv2_xl_in21ft1k_cc12m_1node_b256_sing.sbatch  coca.sbatch  declip.sbatch  lit_regnet320_laion400m_v100_4node_b256.sbatch  lit_singularity_1gpu_yfcc.sbatch  lit_swin_cc12m.sbatch  lit_swin_laion400m_4node_tensorboard_b512.sbatch  lit_swin_laion_wandb.sbatch  lit_tf_efficientnetv2_xl_in21ft1k_cc12m_1node_b256_sing.sbatch  lit_tf_efficientnetv2_xl_in21ft1k_cc12m_1node_b256_sing_rocm.sbatch  lit_tf_efficientnetv2_xl_in21ft1k_laion400m_1node_b256_sing_rocm.sbatch  lit_tf_efficientnetv2_xl_in21ft1k_laion400m_2node_b256_sing.sbatch  lit_tf_efficientnetv2_xl_in21ft1k_laion400m_4node_b256.sbatch  liteffnet.sbatch  litregnet.sbatch  litswin.sbatch  readme.md  test_litswin.sbatch  yfcc.sbatch
data/: README  README.md
dataset/: CC12M.py  config.yaml  naive.py
docs/: Interacting_with_open_clip.ipynb  Interacting_with_open_coca.ipynb  LORA_FINETUNING_SETUP.md  LOW_ACC.md  PRETRAINED.md  clip_conceptual_captions.md  clipa.md  datacomp_models.md  model_profile.csv  openclip_classification_results.csv  openclip_multilingual_retrieval_results.csv  openclip_results.csv  openclip_retrieval_results.csv
exp/: ContrastiveLearning.py
framework/: dataset.py  model.py  preprocessor.py  utils.py
loss/: mse.py
metadata/: flowers.txt  imagenet21k.txt  inat2021-categories.csv  stanfordcars.txt
model/: config.yaml  naive.py
preprocessor/: config.yaml  (+1 more)
(+722 files in other folders)
